# lab1_search

./: pyproject.toml  requirements.txt  run_lab.py
lab1_search/: run_lab.py
lab1_search/vacuum_world/search/: __init__.py  a_star_search.py  breadth_first_search.py  depth_first_search.py  search_node.py
lab1_search/vacuum_world/visualization/: colors.py  pygame_viewer.py
lab1_search/vacuum_world/world/: __init__.py  dirt.py  grid_pos.py  maze.py  world.py
lab2_adversarial_search/: ai.py  game.py  main.py  pyproject.toml  settings.py
lab2_search/: ai.py  game.py  main.py  pyproject.toml  settings.py  utils.py
lab3_deep_learning/: lab 3a - Introduction to Pytorch and Tensorflow.ipynb  lab 3b - MPL homework.ipynb  lab 3c - CNN.ipynb  lab 3d - RNN_LSTM.ipynb  lab 4d - RNN_LSTM.ipynb  pyproject.toml
lab4_bayesian_network/: bayesian_netnuclear_power_station.xml
lab5_reinforcement_learning/: Dockerfile  lab 5a - MC_TD_SARSA_Qlearning.ipynb  lab 5b - dqn_assignment.ipynb  lab_5b_dqn_assignment.ipynb  main.py  pyproject.toml  requirements.txt
lab5_reinforcement_learning/.ipynb_checkpoints/: lab 5a - MC_TD_SARSA_Qlearning-checkpoint.ipynb  lab 5b - dqn_assignment-checkpoint.ipynb
vacuum_world/: __init__.py  main.py
vacuum_world/agent/: __init__.py  vacuum_agent.py
vacuum_world/search/: a_star_search.py  base_search.py  breadth_first_search.py  depth_first_search.py  problem.py  random_search.py  search_node.py
vacuum_world/visualization/: __init__.py
vacuum_world/world/: agent.py
