[project]
name = "lab5-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "matplotlib>=3.10.6",
    "nlopt>=2.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "spyder>=6.1.0",
]
